vlib/v/checker/tests/any_return_type_err.out
vlib/v/checker/tests/any_return_type_err.vv:4:19: error: cannot use type `any` here
    2 | }
    3 | 
    4 | fn (f Test) abc() any {
      |                   ~~~
    5 |     return 0
    6 | }
vlib/v/checker/tests/any_return_type_err.vv:8:20: error: cannot use type `any` here
    6 | }
    7 | 
    8 | fn (f Test) abc2() ?any {
      |                    ~~~~
    9 |     return 0
   10 | }
vlib/v/checker/tests/any_return_type_err.vv:12:20: error: cannot use type `any` here
   10 | }
   11 | 
   12 | fn (f Test) abc3() !any {
      |                    ~~~~
   13 |     return 0
   14 | }
vlib/v/checker/tests/any_return_type_err.vv:16:10: error: cannot use type `any` here
   14 | }
   15 | 
   16 | fn foo() any {
      |          ~~~
   17 |     return 3
   18 | }
vlib/v/checker/tests/any_return_type_err.vv:20:11: error: cannot use type `any` here
   18 | }
   19 | 
   20 | fn foo2() ?any {
      |           ~~~~
   21 |     return 3
   22 | }
vlib/v/checker/tests/any_return_type_err.vv:24:11: error: cannot use type `any` here
   22 | }
   23 | 
   24 | fn foo3() !any {
      |           ~~~~
   25 |     return 3
   26 | }
