vlib/v/checker/tests/any_return_type_err.vv
struct Test {
}

fn (f Test) abc() any {
	return 0
}

fn (f Test) abc2() ?any {
	return 0
}

fn (f Test) abc3() !any {
	return 0
}

fn foo() any {
	return 3
}

fn foo2() ?any {
	return 3
}

fn foo3() !any {
	return 3
}

fn main() {
	println('any ${foo}')
}
